# rag-assistant

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
api/: Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20260530_0001_initial_schema.py
api/src/rag_assistant_api/: main.py  worker.py
api/src/rag_assistant_api/adapters/: embeddings.py  lexical_store.py  llm.py  parsers.py  reranker.py  url_loader.py  vector_store.py
api/src/rag_assistant_api/api/: documents.py  evals.py  health.py  jobs.py  query.py
api/src/rag_assistant_api/core/: config.py  db.py  exceptions.py  logging.py  migrations.py  runtime.py
api/src/rag_assistant_api/domain/: models.py  schemas.py
api/src/rag_assistant_api/services/: chunking.py  documents.py  eval_metrics.py  evaluation.py  jobs.py  metadata.py  query.py  retrieval.py
docs/: benchmark-report.md
docs/reference/: recovered-baseline.md
evals/datasets/: benchmark_eval.jsonl  portfolio_eval.jsonl
samples/benchmark/: atlas-data-governance.md  atlas-disaster-recovery.md  atlas-engineering-oncall.md  atlas-hr-benefits.md  atlas-legacy-refunds-2025.md  atlas-product-orion.md  atlas-prompt-injection-test.md  atlas-regional-operations.md  atlas-release-notes-q1.md  atlas-sales-discounts.md  atlas-security-runbook.md  atlas-support-refunds.md  atlas-vendor-risk.md
scripts/: run_benchmark.py  smoke_docker.sh
tests/: conftest.py
ui/: app.js  index.html  nginx.conf  styles.css
worker/: README.md
(+13 files in other folders)
