[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-assistant-api"
version = "0.1.0"
description = "Production-grade RAG assistant API"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "openai>=1.30.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "pypdf>=5.0.1",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.2",
  "qdrant-client>=1.11.0",
  "sentence-transformers>=3.2.0",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]
